move angular controller to seperate files

--- a/public/index.html
+++ b/public/index.html
@@ -6,6 +6,8 @@
     <script src="/public/bower_components/angular-route/angular-route.js"></script>
     <script src="/public/bower_components/angular-resource/angular-resource.js"></script>
     <script src="/public/core.js"></script>
+    <script src="/public/partials/loginCtrl.js"></script>
+    <script src="/public/partials/homeCtrl.js"></script>
 </head>
 <body>
 <div ng-view></div>
