started implementing toDoListTemplate form

--- a/public/index.html
+++ b/public/index.html
@@ -8,6 +8,10 @@
     <script src="/public/core.js"></script>
     <script src="/public/partials/loginCtrl.js"></script>
     <script src="/public/partials/homeCtrl.js"></script>
+    <script src="/public/partials/createToDoListTemplatesCtrl.js"></script>
+    <script src="/public/partials/manageToDoListTemplatesCtrl.js"></script>
+    <link rel="stylesheet" type="text/css" href="../node_modules/semantic-ui/dist/semantic.min.css">
+    <script src="../node_modules/semantic-ui/dist/semantic.min.js"></script>
 </head>
 <body>
 <div ng-view></div>
