add ui-router to bower add less change login
todo:
	start use ui-router
	fix the css in the login page

--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,9 @@
     <script src="/public/core.js"></script>
     <script src="/public/controllers/createToDoListTemplatesCtrl.js"></script>
     <script src="/public/controllers/manageToDoListTemplatesCtrl.js"></script>
-    <script src="/public/controllers.js"></script>
+    <script src="/public/controllers/login.js"></script>
+    <script src="/public/controllers/home.js"></script>
+    <link rel="stylesheet"  href="css/login.css" type="text/css">
 </head>
 <body>
 <div ng-view></div>
