add create sensor functionality

--- a/public/index.html
+++ b/public/index.html
@@ -10,6 +10,7 @@
     <script src="/public/controllers/manageToDoListTemplatesCtrl.js"></script>
     <script src="/public/controllers/login.js"></script>
     <script src="/public/controllers/home.js"></script>
+    <script src="/public/controllers/sensor.js"></script>
     <link rel="stylesheet"  href="css/login.css" type="text/css">
 </head>
 <body>
