--- a/public/index.html
+++ b/public/index.html
@@ -2,9 +2,15 @@
 <html ng-app="socialscadakb">
 <head>
 <title>Title</title>
+    <link href="/public/bower_components/angular-material/angular-material.css" rel="stylesheet">
+
+
     <script src="/public/bower_components/angular/angular.js"></script>
     <script src="/public/bower_components/angular-route/angular-route.js"></script>
     <script src="/public/bower_components/angular-resource/angular-resource.js"></script>
+    <script src="/public/bower_components/angular-material/angular-material.js"></script>
+    <script src="/public/bower_components/angular-animate/angular-animate.js"></script>
+    <script src="/public/bower_components/angular-aria/angular-aria.js"></script>
     <script src="/public/core.js"></script>
     <script src="/public/controllers/createToDoListTemplatesCtrl.js"></script>
     <script src="/public/controllers/manageToDoListTemplatesCtrl.js"></script>
