--- a/public/index.html
+++ b/public/index.html
@@ -2,8 +2,8 @@
 <html ng-app="socialscadakb">
 <head>
 <title>Title</title>
+    <link href="/public/css/index.css" rel="stylesheet">
     <link href="/public/bower_components/angular-material/angular-material.css" rel="stylesheet">
-
 
     <script src="/public/bower_components/angular/angular.js"></script>
     <script src="/public/bower_components/angular-route/angular-route.js"></script>
