add navigaton template using angular-ui-router

--- a/public/index.html
+++ b/public/index.html
@@ -1,13 +1,13 @@
 <!doctype html>
 <html ng-app="socialscadakb">
 <head>
-<title>Title</title>
-    <link href="/public/css/index.css" rel="stylesheet">
+<title>Knowledgebase</title>
     <link href="/public/bower_components/angular-material/angular-material.css" rel="stylesheet">
+    <link href="/public/css/index.css" rel="stylesheet">
+    <link href="/public/css/login.css" rel="stylesheet" >
 
     <script src="/public/bower_components/angular/angular.js"></script>
-    <script src="/public/bower_components/angular-route/angular-route.js"></script>
-    <script src="/public/bower_components/angular-resource/angular-resource.js"></script>
+    <script src="/public/bower_components/angular-ui-router/release/angular-ui-router.js"></script>
     <script src="/public/bower_components/angular-material/angular-material.js"></script>
     <script src="/public/bower_components/angular-animate/angular-animate.js"></script>
     <script src="/public/bower_components/angular-aria/angular-aria.js"></script>
@@ -17,9 +17,10 @@
     <script src="/public/controllers/login.js"></script>
     <script src="/public/controllers/home.js"></script>
     <script src="/public/controllers/sensor.js"></script>
-    <link rel="stylesheet"  href="css/login.css" type="text/css">
+    <script src="/public/controllers/user.js"></script>
+    <script src="/public/controllers/nav.js"></script>
 </head>
 <body>
-<div ng-view></div>
+<div ui-view=""></div>
 </body>
 </html>
