--- a/public/index.html
+++ b/public/index.html
@@ -5,6 +5,7 @@
     <link href="/public/css/index.css" rel="stylesheet">
     <link href="/public/bower_components/angular-material/angular-material.css" rel="stylesheet">
 
+    <script src="http://code.jquery.com/jquery-2.1.4.js"></script>
     <script src="/public/bower_components/angular/angular.js"></script>
     <script src="/public/bower_components/angular-route/angular-route.js"></script>
     <script src="/public/bower_components/angular-resource/angular-resource.js"></script>
@@ -17,7 +18,9 @@
     <script src="/public/controllers/login.js"></script>
     <script src="/public/controllers/home.js"></script>
     <script src="/public/controllers/sensor.js"></script>
-    <link rel="stylesheet"  href="css/login.css" type="text/css">
+    <link rel="stylesheet"  href="/public/css/login.css" type="text/css">
+    <link rel="stylesheet"  href="/public/css/semantic.min.css" type="text/css">
+    <script src="/public/js/semantic.min.js"></script>
 </head>
 <body>
 <div ng-view></div>
