--- a/public/index.html
+++ b/public/index.html
@@ -7,6 +7,7 @@
     <link href="/public/css/login.css" rel="stylesheet" >
 
     <script src="/public/bower_components/angular/angular.js"></script>
+    <script src="/public/bower_components/jquery/dist/jquery.min.js"></script>
     <script src="/public/bower_components/angular-ui-router/release/angular-ui-router.js"></script>
     <script src="/public/bower_components/angular-material/angular-material.js"></script>
     <script src="/public/bower_components/angular-animate/angular-animate.js"></script>
