add semantic css

--- a/public/index.html
+++ b/public/index.html
@@ -20,6 +20,7 @@
     <script src="/public/js/semantic.min.js"></script>
     <script src="/public/controllers/user.js"></script>
     <script src="/public/controllers/nav.js"></script>
+    <link rel="stylesheet"  href="/public/css/semantic.min.css" type="text/css">
 </head>
 <body>
 <div ui-view=""></div>
